# GeneralCPP

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  Software_Architecture_With_CPP  Software_Architecture_With_CPP.cbp  cmake_install.cmake  main.cpp
CPP_GuideLines/: CMakeLists.txt  Exceptions.h  Move.h  RunCPPGuideLines.cpp  VectorBestPractice.h  main.cpp
Chapter1/SOLID/: LiskovSubstitutionPrinciple.h  RunSOLIDExamples.cpp  SingleResponsability.h
Concurrency/: CMakeLists.txt  CV.h  main.cpp
Datastructures/: CMakeLists.txt  Matrix.h  main.cpp
DesignPatterns/: RunDesignPatterns.cpp
DesignPatterns/Creational/: RunCreationalPatterns.cpp  Singleton.h
DesignPatterns/Creational/Builder/: HTML.h  RunBuilderPatterns.cpp
