cmake_minimum_required(VERSION 3.19)
project(Software_Architecture_With_CPP)

set(CMAKE_CXX_STANDARD 20)

add_executable(Software_Architecture_With_CPP main.cpp)
add_library(SOLID Chapter1/SOLID/RunSOLIDExamples.cpp Chapter1/SOLID/SingleResponsability.h)
target_link_libraries(Software_Architecture_With_CPP SOLID)
add_library(CPP_GuideLines CPP_GuideLines/Move.h CPP_GuideLines/RunCPPGuideLines.cpp)
target_link_libraries(Software_Architecture_With_CPP CPP_GuideLines)
